// TEMPLATE:

// == {es} version n.n.n

//=== Breaking Changes

//=== Deprecations

//=== New Features

//=== Enhancements

//=== Bug Fixes

//=== Regressions

//=== Known Issues
////

== {es} version 6.4.3

//=== Breaking Changes

//=== Deprecations

//=== New Features

=== Enhancements

Change linker options on macOS to allow Homebrew installs ({ml-pull}225[225])

//=== Bug Fixes

//=== Regressions

== Elasticsearch version 6.4.0

//=== Breaking Changes

//=== Deprecations

=== New Features

* Detectors now support {stack-ov}/ml-rules.html[custom rules] that enable the user to improve machine learning results by providing some domain-specific knowledge in the form of rule. ({ml-pull}119[#119])

=== Enhancements

* Improves and uses periodic boundary condition for seasonal component modeling ({ml-pull}84[#84])
* Improves robustness with respect to outliers in detection and initialization of seasonal components ({ml-pull}90[#90] (issue: {ml-issue}87[#87]))
* Improves behavior when there are abrupt changes in the seasonal components present in a time series ({ml-pull}91[#91] (issue: {ml-issue}6[#6]))
* Adds explicit change point detection and modeling ({ml-pull}92[#92])
* Improves partition analysis memory usage ({ml-pull}97[#97])
* Reduces model memory by storing state for periodicity testing in a compressed format ({ml-pull}104[#104],{ml-pull}100[#100])
* Improves the accuracy of model memory control
({ml-pull}125[#125], {ml-issue}122[#122])
* Improves adaption of the modeling of cyclic components to very localized features
({ml-pull}138[#138], {ml-pull}134[#134])
* Reduces the memory consumed by distribution models ({ml-pull}162[#162], {ml-pull}146[#146])
* Forecasting of large machine learning jobs is now supported by temporarily storing
model state on disk ({ml-pull}89[#89])
* Secures the machine learning processes by preventing system calls such as fork 
and exec. The Linux implementation uses Seccomp BPF (secure computing with 